added initial files

--- a/index.html
+++ b/index.html
@@ -403,11 +403,7 @@
                 </div>
                 <div class="comment">
                     <p>
-                      Got these for my father who was using cheap trainers that were hurting his feet.
-
-                      He uses these for running indoor/outdoors and walking. They are great on his feet, he doesn't have any off the issues wich he had when using the cheap brand trainers.
-
-                      Definitely would recommend these.
+                      I bought my first pair from sports shop went for another pair no longer stocked. Walk 6 miles a day they are so comfortable.. only downside little stones get in the grooves
 
                       Great price, comfortable and look great.  
                     </p>
@@ -438,7 +434,7 @@
                 </div>
                 <div class="comment">
                     <p>
-                        The fit is comfortable and cushioned, I would say perfect for brisk walking or light jogging, I wouldn't venture them for daily running, I think there are more performing products. Very breathable shoe so your foot doesn't sweat, but if it's cold outside you can feel it enter your foot, so at your discretion if you like to keep your wedges cool...
+                       I bought my first pair from sports shop went for another pair no longer stocked. Walk 6 miles a day they are so comfortable.. only downside little stones get in the grooves.
                     </p>
                 </div>
             </div>   
@@ -455,7 +451,7 @@
                         </div>
 
                         <div class="name">
-                            <strong>Akshit Sood</strong>
+                            <strong>Ishita Sood</strong>
 
                             <div class="like">
                                 <i class="fa-solid fa-star"></i>
@@ -470,7 +466,7 @@
                 </div>
                 <div class="comment">
                     <p>
-                        The fit is comfortable and cushioned, I would say perfect for brisk walking or light jogging, I wouldn't venture them for daily running, I think there are more performing products. Very breathable shoe so your foot doesn't sweat, but if it's cold outside you can feel it enter your foot, so at your discretion if you like to keep your wedges cool...
+                       I bought my first pair from sports shop went for another pair no longer stocked. Walk 6 miles a day they are so comfortable.. only downside little stones get in the grooves...
                     </p>
                 </div>
             </div>   
@@ -499,7 +495,7 @@
                 </div>
                 <div class="comment">
                     <p>
-                       The fit is comfortable and cushioned, I would say perfect for brisk walking or light jogging, I wouldn't venture them for daily running, I think there are more performing products. Very breathable shoe so your foot doesn't sweat, but if it's cold outside you can feel it enter your foot, so at your discretion if you like to keep your wedges cool...
+                        I bought my first pair from sports shop went for another pair no longer stocked. Walk 6 miles a day they are so comfortable.. only downside little stones get in the grooves
                     </p>
                 </div>
             </div>   
@@ -513,7 +509,7 @@
                         </div>
 
                         <div class="name">
-                            <strong>Annanya Gupta</strong>
+                            <strong>Akshit Gupta</strong>
 
                             <div class="like">
                                 <i class="fa-solid fa-star"></i>
@@ -528,7 +524,7 @@
                 </div>
                 <div class="comment">
                     <p>
-                      The fit is comfortable and cushioned, I would say perfect for brisk walking or light jogging, I wouldn't venture them for daily running, I think there are more performing products. Very breathable shoe so your foot doesn't sweat, but if it's cold outside you can feel it enter your foot, so at your discretion if you like to keep your wedges cool...
+                       I bought my first pair from sports shop went for another pair no longer stocked. Walk 6 miles a day they are so comfortable.. only downside little stones get in the grooves.
                     </p>
                 </div>
             </div>   
